@@ -1,1 +1,2 @@
+DECL|function|QT_MODULE
 DECL|macro|QTESTTOUCH_H
