@@ -39,7 +39,7 @@ DECL|function|emitLastWindowClosed
 DECL|function|enterModal
 DECL|function|event
 DECL|function|exec
-DECL|function|findClosestTouchPointId
+DECL|function|findClosestTouchPointTarget
 DECL|function|focusNextPrevChild_helper
 DECL|function|focusWidget
 DECL|function|font
@@ -77,7 +77,6 @@ DECL|function|qt_app_fonts_hash
 DECL|function|qt_app_palettes_hash
 DECL|function|qt_matchLibraryName
 DECL|function|qt_sendSpontaneousEvent
-DECL|function|qt_translateRawTouchEvent
 DECL|function|qt_tryModalHelper
 DECL|function|queryKeyboardModifiers
 DECL|function|quitOnLastWindowClosed
